# media-dock

./: .gitignore  AGENTS.md  Cargo.toml  HOW_TO_INSTALL.md  README.md  build.rs  tauri.conf.json
.github/workflows/: ci.yml  release.yml
assets/icons/macos/: AppIcon.icns
capabilities/: default.json
packaging/linux/: media-dock.desktop  pullryn.desktop  pullyt.desktop
scripts/: generate-icons.sh
src/: main.rs
src/modules/downloader/application/: use_cases.rs
src/modules/downloader/domain/: entities.rs  errors.rs  ports.rs  value_objects.rs
src/modules/downloader/infrastructure/: dependencies.rs  github_releases.rs  mod.rs  save_dialog.rs  yt_dlp.rs
src/modules/downloader/presentation/: app.rs  mod.rs  tauri_app.rs
tests/: integration.rs  unit.rs
tests/integration/: downloader_use_cases.rs
tests/unit/: check_for_updates.rs  value_objects.rs  yt_dlp.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.svelte  app.css
updater/: latest.json.template
wix/: main.wxs
