[package]
name = "pullryn"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
iced = { version = "0.12", features = ["tokio", "image", "svg"] }
rfd = "0.14"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ureq = { version = "2", default-features = true, features = ["json"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
xz2 = "0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "Pullryn"
identifier = "com.pausegarra.pullryn"
icon = ["assets/icons/macos/AppIcon.icns"]
osx_minimum_system_version = "10.15"
category = "Utility"

[package.metadata.deb]
name = "pullryn"
maintainer = "pausegarra"
copyright = "2026, pausegarra"
license-file = ["LICENSE", "4"]
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
  ["target/release/pullryn", "usr/bin/pullryn", "755"],
  ["packaging/linux/pullryn.desktop", "usr/share/applications/pullryn.desktop", "644"],
  ["assets/icons/linux/hicolor/16x16/apps/pullryn.png", "usr/share/icons/hicolor/16x16/apps/pullryn.png", "644"],
  ["assets/icons/linux/hicolor/24x24/apps/pullryn.png", "usr/share/icons/hicolor/24x24/apps/pullryn.png", "644"],
  ["assets/icons/linux/hicolor/32x32/apps/pullryn.png", "usr/share/icons/hicolor/32x32/apps/pullryn.png", "644"],
  ["assets/icons/linux/hicolor/48x48/apps/pullryn.png", "usr/share/icons/hicolor/48x48/apps/pullryn.png", "644"],
  ["assets/icons/linux/hicolor/64x64/apps/pullryn.png", "usr/share/icons/hicolor/64x64/apps/pullryn.png", "644"],
  ["assets/icons/linux/hicolor/128x128/apps/pullryn.png", "usr/share/icons/hicolor/128x128/apps/pullryn.png", "644"],
  ["assets/icons/linux/hicolor/256x256/apps/pullryn.png", "usr/share/icons/hicolor/256x256/apps/pullryn.png", "644"],
  ["assets/icons/linux/hicolor/512x512/apps/pullryn.png", "usr/share/icons/hicolor/512x512/apps/pullryn.png", "644"]
]
