[package]
name = "pullyt"
version = "1.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tauri = { version = "2", features = [] }
rfd = "0.14"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ureq = { version = "2", default-features = true, features = ["json"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
xz2 = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
